# adm_technical_case_2026

./: .deployment  .gitattributes  .gitignore  README.md  app.py  entrypoint.sh  item_info.csv  orders.csv  startup.sh  startup.txt  trucks.csv  trucks.xlsx  wsgi.py
optimization/: README_AUX.md  fleet_analytics.ipynb  main.py  pyproject.toml  requirements.txt  wsgi.py
optimization/dashboard/: __init__.py  app.py  callbacks.py  figures.py  layouts.py
optimization/dashboard/assets/: resize.js  style.css  style_backup.css
optimization/results/: dispatch_timeline.csv  fleet_summary.csv  order_assignments.csv  route_details.csv  solution_metadata.json  solver_cache.pkl
optimization/src/: __init__.py  config.py  cost_engine.py  data_loader.py  distance.py  models.py  monte_carlo.py  reporting.py  scheduler.py
optimization/src/solvers/: __init__.py  alns.py  base.py  column_gen.py  greedy.py  pareto.py
